wayward/tests/compile_fail/bad_extractor.stderr
error[E0277]: `BadType` cannot be extracted from request metadata
 --> tests/compile_fail/bad_extractor.rs:7:17
  |
7 | async fn bad(x: BadType, y: String) -> &'static str {
  |                 ^^^^^^^ does not implement `FromRequestParts`
  |
help: the trait `FromRequestParts` is not implemented for `BadType`
 --> tests/compile_fail/bad_extractor.rs:4:1
  |
4 | struct BadType;
  | ^^^^^^^^^^^^^^
  = note: valid extractors: `Path<P>`, `State<T>`, `Query<T>`, `HeaderMap`
help: the following other types implement trait `FromRequestParts`
 --> $WORKSPACE/wayward-server/src/extract.rs
  |
  | / impl<P> FromRequestParts for Path<P>
  | | where
  | |     P: PathSpec + ExtractPath + Send,
  | |     P::Captures: Send,
  | |______________________^ `wayward::Path<P>`
...
  |   impl<T: Clone + Send + Sync + 'static> FromRequestParts for State<T> {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `wayward::State<T>`
...
  |   impl<T: DeserializeOwned + Send> FromRequestParts for Query<T> {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Query<T>`
...
  |   impl FromRequestParts for http::HeaderMap {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `HeaderMap`
note: required by a bound in `__assert_parts_0`
 --> tests/compile_fail/bad_extractor.rs:6:1
  |
6 | #[handler]
  | ^^^^^^^^^^ required by this bound in `__assert_parts_0`
  = note: this error originates in the attribute macro `handler` (in Nightly builds, run with -Z macro-backtrace for more info)
